[package]
name = "qrest"
version = "0.2.1"
edition = "2021"
description = "Queries an ArcGIS REST service /query endpoint"
authors =  ["Andrew Vitale <vitale232@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
